<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team7Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="spacer"> </string>
    
    <!-- Sorting Preferences -->
    <string name="sort_date">Sort comments by date</string>
    <string name="sort_pictures">View only comments with pictures</string>
    <string name="sort_rating">Sort threads by rating</string>
    <string name="sort_location">Sort comments by proximity</string>
    
    <!-- Strings used for general application toasts -->
	<string name="refresh">Refresh Successful</string>
	<string name="refresh_failed">Refresh Failed: No Network Connection</string>
	<string name="title">Thread Title</string>
	<string name="author">Author</string>
	
	<!-- Toasts for threads -->
	<string name="toast_edit">Edited a thread</string>
	<string name="toast_reply">Replied to a thread</string>
	<string name="toast_create">Created thread</string>
	<string name="toast_favorite">Thread favorited</string>
	<string name="toast_cache">Thread added to cache</string>
	<string name="toast_network_fail_push">There is no network connection, you can not post comments or topics</string>
	<string name="toast_pull_new">New stuff is waiting for you, click refresh button to pull</string>
	
	<!-- Toasts for userview -->
	<string name="location_update">Location has been set</string>
	<string name="location_fail">Failed to update location</string>
	<string name="no_edit_permission">Invalid edit permissions</string>
	<string name="set_address_toast">Address set to </string>
	
    <!-- General strings for multiple buttons/dialog boxes -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    
    <!-- Strings for the ActionBar -->
    <string name="topics_home_button">Topics Home</string>
    <string name="geo_location_set">Set geolocation</string>
    <string name="user_preferences">Set user preferences</string>
    <string name="create_topic">Create a new topic</string>
    <string name="refresh_topic">Refresh the current topic</string>
    <string name="sorting_options">Sorting preferences</string>
    <string name="show_favorites">Show favorites</string>
    <string name="tag_search_hint">Search thread tags</string>
    <string name="show_cache">Show cached comments</string>
    <string name="search">Search</string>
    
    <!-- Strings for the CreateIdentityAlertView -->
    <string name="create_identity">Create User Identity</string>
    <string name="create_user_hint">Enter user name</string>
	<string name="create_user_confirm">Create User</string>
    
	<!-- Strings for the SortPreferencesAlertView -->
	<string name="select_sorting_preferences">Select Sorting Preferences</string>
	<string name="confirm_preferences">Change Preferences</string>
	
	<!-- Strings for the ThreadAlertView -->
	<string name="reply_thread">Reply To Thread</string>
	<string name="create_thread">Create New Topic</string>
	<string name="enter_title">Title</string>
	<string name="enter_title_optional">Title (optional)</string>
	<string name="enter_comment">Comment</string>
	<string name="insert_image">Insert Image</string>
	<string name="location_prompt">Enter address or leave blank to use GPS location</string>
	<string name="select_thread_location">Select location to use</string>
	<string name="address_thread_hint">Address (optional)</string>
	<string name="use_set_location">Use Set Location</string>
	<string name="use_gps">Use Current Location</string>
	<string name="tag_hint">Thread Tags</string>
		
	<!-- Strings for the UI buttons for each thread in list view -->
	<string name="edit_thread">Edit Thread</string>
	<string name="favorite_thread">Favorite Thread</string>
	<string name="save_thread">Save Thread</string>
	<string name="image_thread">Thread Image</string>
	<string name="tag_thread">Add Tag</string>
	<string name="tag">Tags:</string>
	
	<!-- Strings for the LocationLookupAlertView -->
	<string name="set_location">Set Alternate Location</string>
	<string name="location_message">Enter an address</string>
	<string name="address_hint">Address</string>
	<string name="longitude">Longitude</string>
	<string name="latitude">Latitude</string>
	<string name="address">Address</string>
	<string name="reset_location">Use Current Position</string>
	
	<!-- Strings for arrays in arrays.xml -->
	<string name="alternate_location">Alternate Set Location</string>
	<string name="current_gps">Current GPS Location</string>
	<string name="existing_thread_loc">Existing Thread Location</string>
	
	<!-- String for adding tags to the thread -->
	<string name="append_tag">Append Tag</string>
	<string name="delete_tag">Select tags to delete</string>
	<string name="tag_name">Tag name</string>
	<string name="sort_pictures_disable">Don\'t view only comments with pictures</string>
	<string name="sort_global">Sort comments globally</string>
	<string name="sort_parents">Sort by parent</string>
	
	
</resources>
