<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Created by Android. Safe to delete?
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
        -->

    <!-- Home button for list of topic -->
	<item android:id="@+id/action_home" 
	      android:icon="@android:drawable/ic_menu_myplaces"
	      android:title="@string/topics_home_button"
	      android:showAsAction="always"/>
	
	<!-- Set geolocation button -->
	<item android:id="@+id/action_geo_location" 
	      android:icon="@android:drawable/ic_dialog_map"
	      android:title="@string/geo_location_set"
	      android:showAsAction="always"/>
	
	<!-- User preferences button -->
	<item android:id="@+id/action_user_preferences" 
	      android:icon="@android:drawable/ic_dialog_info"
	      android:title="@string/user_preferences"
	      android:showAsAction="always"/>
		
	<!-- Add current topic to favorites button -->
	<item android:id="@+id/action_add_favorite" 
	      android:icon="@android:drawable/btn_star_big_off"
	      android:title="@string/add_topic_favorites"
	      android:showAsAction="always"/>
	
	<!-- Create topic button -->
	<item android:id="@+id/action_create_topic" 
	      android:icon="@android:drawable/stat_notify_chat"
	      android:title="@string/create_topic"
	      android:showAsAction="always"/>
	
	<!-- Refresh topic button -->
	<item android:id="@+id/action_refresh" 
	      android:icon="@android:drawable/ic_popup_sync"
	      android:title="@string/refresh_topic"
	      android:showAsAction="always"/>	
	      
	<!-- Sorting options -->
	<item android:id="@+id/action_sort" 
	      android:icon="@android:drawable/ic_menu_search"
	      android:title="@string/sorting_options"
	      android:showAsAction="always"/>
</menu>
