<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <TableLayout
        android:id="@+id/threadRight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4" >

        <TableRow
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.1"
            
            android:gravity="center_horizontal|left" >

            <TextView
                android:id="@+id/threadTitle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="bottom|left"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/body"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/threadBody"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.08"
                android:text="@string/enter_comment"
                android:gravity="bottom|left"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tags"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.01" >
            
            <TextView
                android:id="@+id/threadTags"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/spacer"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </TableRow>
        
        <LinearLayout
            android:id="@+id/threadButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/authorName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.48"
                android:text="@string/author"
                android:gravity="bottom|left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <ImageButton
                android:id="@+id/threadEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/edit_thread"
                android:focusable="false"
                android:src="@drawable/ic_thread_edit" />

            <ImageButton
                android:id="@+id/threadFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/favorite_thread"
                android:focusable="false"
                android:src="@drawable/ic_thread_favorite" />

            <ImageButton
                android:id="@+id/threadReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/reply_thread"
                android:focusable="false"
                android:src="@drawable/ic_thread_reply" />

            <ImageButton
                android:id="@+id/threadCache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/save_thread"
                android:focusable="false"
                android:src="@drawable/ic_thread_cache" />
        </LinearLayout>

    </TableLayout>

</LinearLayout>